User-visible changes in version 1.0.0  (2011-0 -  ):
* requires wxWidgets >= 2.9.2

User-visible changes in version 0.9.8  (not yet):
* bug fixes: corrected Caglioti equation in the powder diffraction add-on,
  fixed problem with negative simple-variables
* GUI: new configuration dialogs for plots

User-visible changes in version 0.9.7  (2011-02-08):
* bug fixes: UDFs (user-defined functions) did not work in ver. 0.9.5-6,
  a few fixes in the powder diffraction add-on and in other places
* data operations: added aggregate functions argmin, argmax and count
* GUI: redesigned the Data > Export dialog

User-visible changes in version 0.9.6  (2011-01-26):
* fixed three bugs, one of them was sometimes crashing the program at startup

User-visible changes in version 0.9.5  (2011-01-24):
* libfityk: the parser has been completely rewritten and the syntax was
  slightly changed:
  - major changes in the `info' command; two new commands, `print' and `debug', 
    partially took over some functionality of the old `info'
  - "commands" replaced by "set"/"exec"
  - "dump" replaced by "info state"
  - values of the fitting_method setting changed to lower case
  - "set @0.title = ..." replaced with "@0: title = ..."
  - settings: removed formula_export_style, guess_at_center_pm and
    can_cancel_guess, changed autoplot and verbosity,
    added logfile, log_full, fit_replot,
    info_numeric_format renamed to numeric_format, data_default_sigma to
    default_sigma, cut_function_level to function_cutoff,
    variable_domain_percent to domain_percent
  - in "define ... where param=expr" expr is substituted in brackets now
  - added syntax: delete file 'filename'
  - "guess": changed argument order
  - F.param = $variable   ->   F[*].param = $variable
  See the wiki for details (there is a tool that upgrades fityk scripts).
* new website address (fityk.nieto.pl) and new code repository (GitHub)
* GUI: simplified two dialogs: Edit Script and Definition Manager